added more pages
references and tutorials

--- a/index.html
+++ b/index.html
@@ -210,6 +210,13 @@
 
   <br>
   <br>
+
+<ul>External Sources?
+  <li><a href=References.html>See References for Future Updates</a></li>
+  <li><a href=Tutorials.html>See Tutorials for Resources</a></li>
+</ul>
+
+
   <br>
   <br>
   <br>
