--- a/archive.html
+++ b/archive.html
@@ -19,6 +19,40 @@
 
 
 <br><br>
+<hr>
+
+<p><a href= "https://codeforces.com/"><img src = codeforces-sponsored-by-ton.png alt = "CodeForces" width=555 height=130></a></p>
+<br>
+<br>
+<a href =index.html>Go back to index</a>
+<br><br>
+<a href =wip.html>Go back to wip</a>
+
+
+
+<hr>
+<h1 align = center> 
+  This is an image
+</h1>
+<p><img src=github-img.png alt="this is an alt text" width="=200" height="200"></p>
+<p><img alt="this is an alt text" width="=100" height="100"></p>
+<br>
+<br>
+<a href =index.html>Go back to index</a>
+<br><br>
+<a href =wip.html>Go back to wip</a>
+
+
+
+
+
+
+
+
+
+
+
+
 
 <hr>
 
