added to the references

--- a/References.html
+++ b/References.html
@@ -1,21 +1,85 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-<title>
-    Image Page
-</title>
+    <style>
+        table,
+        th,
+        td {
+          border: 3px solid rgba(31, 106, 168, 0.452);
+        }
+    
+      </style>
+    <title>
+        References for oUITS
+    </title>
 </head>
-<body >
-<h1 align = center> 
-    This is an image
-</h1>
-<p><img src=github-img.png alt="this is an alt text" width="=200" height="200"></p>
-<p><img alt="this is an alt text" width="=100" height="100"></p>
-<br>
-<br>
-<a href =index.html >Go back</a>
+
+<body>
+    <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p>
 
 
+    <h3>Other Universities doing skibidi</h3>
+
+    <table>
+        <tr>
+            <th>
+                UIU
+            </th>
+            <td>
+                <ul>
+                    <li><a href="https://nurulalamador.github.io/UIUQuestionBank/">UIU Question Bank</a></li>
+
+                </ul>
+            </td>
+
+        </tr>
+
+        <tr>
+            <th>
+                DIU
+            </th>
+            <td>
+                <ul>
+                    <li> <a href="https://routine.zohirrayhan.me/">DIU Routine Scrapper</a> + <a
+                            href="https://play.google.com/store/apps/details?id=com.zohirrayhan.routinescrapper">PlayStore
+                            App</a></li>
+                    <ul>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                IUT
+            </th>
+            <td>
+                <ul>
+                    <li> <a href="https://www.iutoic-dhaka.edu/e-resources">E Resources</a></li>
+                    <ul>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                AUST
+            </th>
+            <td>
+                <ul>
+                    <li> <a href="https://aust.edu/library/e_resources">E Resources</a></li>
+                    <br>
+                    <li> <a href="https://www.scopus.com/home.uri">Scopus</a></li>
+                    <br>
+                    <li> <a href="https://www.turnitin.com/">turnitin</a></li>
+                    <ul>
+            </td>
+        </tr>
+
+    </table>
+
+
+
+
+
+
+    <p id=" bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
 </body>
 
 </html>
