--- a/References.html
+++ b/References.html
@@ -63,7 +63,7 @@
             </th>
             <td>
                 <ul>
-                    <li> <a href="https://aust.edu/library/e_resources">E Resources</a></li>
+                    <li> <a href="https://aust.edu/library/e_resources">E Resources</a> + <a href="https://onlinelibrary.wiley.com/action/showPublications">E Books</a></li>
                     <br>
                     <li> <a href="https://www.scopus.com/home.uri">Scopus</a></li>
                     <br>
