--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </font>
 
   <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the UNOFFICIAL Online
-      Resources for UITS.<br>Note that I will be primarily working on <a
+      Resources for the <i>students</i> of UITS <br>(facultyরা কষ্ট দেয় তাই কাট্টি 😔).<br>Note that I will be primarily working on <a
         href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
         Hosting</a></small></p>
 
