--- a/References.html
+++ b/References.html
@@ -6,10 +6,9 @@
         table,
         th,
         td {
-          border: 3px solid rgba(31, 106, 168, 0.452);
+            border: 3px solid rgba(31, 106, 168, 0.452);
         }
-    
-      </style>
+    </style>
     <title>
         References for oUITS
     </title>
@@ -19,9 +18,9 @@
     <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p>
 
 
-    <h3>Other Universities doing skibidi</h3>
+    <p align="center">(Other Universities doing skibidi)</p>
 
-    <table>
+    <table align="center">
         <tr>
             <th>
                 UIU
@@ -44,7 +43,7 @@
                     <li> <a href="https://routine.zohirrayhan.me/">DIU Routine Scrapper</a> + <a
                             href="https://play.google.com/store/apps/details?id=com.zohirrayhan.routinescrapper">PlayStore
                             App</a></li>
-                    <ul>
+            </td>
             </td>
         </tr>
         <tr>
@@ -54,7 +53,7 @@
             <td>
                 <ul>
                     <li> <a href="https://www.iutoic-dhaka.edu/e-resources">E Resources</a></li>
-                    <ul>
+                </ul>
             </td>
         </tr>
         <tr>
@@ -63,15 +62,40 @@
             </th>
             <td>
                 <ul>
-                    <li> <a href="https://aust.edu/library/e_resources">E Resources</a> + <a href="https://onlinelibrary.wiley.com/action/showPublications">E Books</a></li>
+                    <li> <a href="https://aust.edu/library/e_resources">E Resources</a> + <a
+                            href="https://onlinelibrary.wiley.com/action/showPublications">E Books</a></li>
                     <br>
                     <li> <a href="https://www.scopus.com/home.uri">Scopus</a></li>
                     <br>
                     <li> <a href="https://www.turnitin.com/">turnitin</a></li>
-                    <ul>
             </td>
         </tr>
-
+        </td>
+        </tr>
+        <tr>
+            <th>
+                NSU
+            </th>
+            <td>
+                <ul>
+                    <li> <a href="https://www.northsouth.edu/archive.html">Archive(records?)</a></li>
+                    <br>
+                    <li> <a href="https://library.northsouth.edu/">Library</a></li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                BRAC
+            </th>
+            <td>
+                <ul>
+                    <li> <a href="https://library.bracu.ac.bd/">Library</a></li>
+                    <br>
+                    <li> <a href="https://www.bracu.ac.bd/students">Other Facilities for the Students</a></li>
+                </ul>
+            </td>
+        </tr>
     </table>
 
 
