--- a/References.html
+++ b/References.html
@@ -20,7 +20,7 @@
 
     <p align="center">(Other Universities doing skibidi)</p>
 
-    <table align="center">
+    <table align="center" style="width:90%">
         <tr>
             <th>
                 UIU
@@ -28,12 +28,9 @@
             <td>
                 <ul>
                     <li><a href="https://nurulalamador.github.io/UIUQuestionBank/">UIU Question Bank</a></li>
-
                 </ul>
             </td>
-
         </tr>
-
         <tr>
             <th>
                 DIU
@@ -167,7 +164,7 @@
         </tr>
     </table>
 
-
+    <p align=center><a href =index.html >Go back to index</a></p>
 
 
 
