--- a/References.html
+++ b/References.html
@@ -23,40 +23,59 @@
     <table align="center" style="width:90%">
         <tr>
             <th>
-                UIU
+                (University)
             </th>
+            <th>
+                (Website)
+            </th>
+            <th>
+                (Student-made)
+            </th>
+        </tr>
+        <tr align="center">
+            <td>
+                UIU
+            </td>
+            <td>
+
+            </td>
             <td>
                 <ul>
                     <li><a href="https://nurulalamador.github.io/UIUQuestionBank/">UIU Question Bank</a></li>
                 </ul>
             </td>
         </tr>
-        <tr>
-            <th>
+        <tr align="center">
+            <td>
                 DIU
-            </th>
+            </td>
             <td>
                 <ul>
-                    <li> <a href="https://routine.zohirrayhan.me/">DIU Routine Scrapper</a> + <a
+                    
+            <td>
+<li> <a href="https://routine.zohirrayhan.me/">DIU Routine Scrapper</a> <br>+ <a
                             href="https://play.google.com/store/apps/details?id=com.zohirrayhan.routinescrapper">PlayStore
-                            App</a></li>
+                            App</a>
+                    </li>
+
             </td>
-            </td>
+           
         </tr>
-        <tr>
-            <th>
+        <tr align="center">
+            <td>
                 IUT
-            </th>
+            </td>
             <td>
                 <ul>
                     <li> <a href="https://www.iutoic-dhaka.edu/e-resources">E Resources</a></li>
                 </ul>
             </td>
+            <td></td>
         </tr>
-        <tr>
-            <th>
+        <tr align="center">
+            <td>
                 AUST
-            </th>
+            </td>
             <td>
                 <ul>
                     <li> <a href="https://aust.edu/library/e_resources">E Resources</a> + <a
@@ -65,38 +84,38 @@
                     <li> <a href="https://www.scopus.com/home.uri">Scopus</a></li>
                     <br>
                     <li> <a href="https://www.turnitin.com/">turnitin</a></li>
-            </td>
+            </td> <td></td>
         </tr>
         </td>
         </tr>
-        <tr>
-            <th>
+        <tr align="center">
+            <td>
                 NSU
-            </th>
+            </td>
             <td>
                 <ul>
                     <li> <a href="https://www.northsouth.edu/archive.html">Archive(records?)</a></li>
                     <br>
                     <li> <a href="https://library.northsouth.edu/">Library</a></li>
                 </ul>
-            </td>
+            </td> <td></td>
         </tr>
-        <tr>
-            <th>
+        <tr align="center">
+            <td>
                 BRACU
-            </th>
+            </td>
             <td>
                 <ul>
                     <li> <a href="https://library.bracu.ac.bd/">Library</a></li>
                     <br>
                     <li> <a href="https://www.bracu.ac.bd/students">Other Facilities for the Students</a></li>
                 </ul>
-            </td>
+            </td> <td></td>
         </tr>
-        <tr>
-            <th>
+        <tr align="center">
+            <td>
                 SEU
-            </th>
+            </td>
             <td>
                 <ul>
                     <li> UCAM Dashboard: <br>summarizes important sections like,
@@ -110,12 +129,12 @@
                         </ul>
                     </li>
                 </ul>
-            </td>
+            </td> <td></td>
         </tr>
-        <tr>
-            <th>
+        <tr align="center">
+            <td>
                 IUB
-            </th>
+            </td>
             <td>
                 <ul>
                     <li> <a href="https://ar.iub.edu.bd/">IUB Academic Repository</a></li>
@@ -124,47 +143,47 @@
                     <br>
                     <li> <a href="https://iub.ac.bd/directory">Directory</a></li>
                 </ul>
-            </td>
+            </td> <td></td>
         </tr>
-        <tr>
-            <th>
+        <tr align="center">
+            <td>
                 AIUB
-            </th>
+            </td>
             <td>
                 <ul>
                     <li> <a href="https://www.aiub.edu/about/Resources">Resource List</a></li>
                     <br>
                     <li> <a href="https://www.aiub.edu/faculties/fst/ug-course-catalog">Course Catalogue</a></li>
                 </ul>
-            </td>
+            </td> <td></td>
         </tr>
-        <tr>
-            <th>
+        <tr align="center">
+            <td>
                 EWU
-            </th>
+            </td>
             <td>
                 <ul>
                     <li> <a href="...">...</a></li>
                     <br>
 
                 </ul>
-            </td>
+            </td> <td></td>
         </tr>
-        <tr>
-            <th>
+        <tr align="center">
+            <td>
                 SUB
-            </th>
+            </td>
             <td>
                 <ul>
                     <li> <a href="...">...</a></li>
                     <br>
 
                 </ul>
-            </td>
+            </td> <td></td>
         </tr>
     </table>
 
-    <p align=center><a href =index.html >Go back to index</a></p>
+    <p align=center><a href=index.html>Go back to index</a></p>
 
 
 
