--- a/Tutorials.html
+++ b/Tutorials.html
@@ -1,17 +1,49 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>
-    Anchor Page
-</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YouTube Video Embed</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
+            overflow: hidden;
+            max-width: 100%;
+            margin: 30px 0;
+        }
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
- <p><a href= "https://codeforces.com/"><img src = codeforces-sponsored-by-ton.png alt = "CodeForces" width=555 height=130></a></p>
- <br>
-<br>
-<a href =index.html>Go back to index</a>
-<a href =wip.html>Go back to wip</a>
-
+    <h1>Embedded YouTube Video</h1>
+    <div class="video-container">
+        <iframe 
+            width="560" 
+            height="315" 
+            src="https://www.youtube.com/embed/Zwx5VvdWbh8?si=oKj9CioROByiuwZu" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+        </iframe>
+    </div>
+    <p>This video is embedded directly on the page using an iframe.</p>
 </body>
-
 </html>
