--- a/Tutorials.html
+++ b/Tutorials.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>Embedded YouTube Video</h1>
+    <p>Google Drive can search for PDF by information inside of it - Tutorial</p>
     <div class="video-container">
         <iframe 
             width="560" 
@@ -44,6 +44,18 @@
             allowfullscreen>
         </iframe>
     </div>
-    <p>This video is embedded directly on the page using an iframe.</p>
+    <p>Offline Browser | Making w3schools and geeksforgeeks accessible offline</p>
+    <div class="video-container">
+        <iframe 
+            width="315" 
+            height="560" 
+            src="https://www.youtube.com/embed/sFuVutbYbws?si=pwTIwD4gPRP2oge4" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+        </iframe>
+    </div>
+    
 </body>
 </html>
