--- a/References.html
+++ b/References.html
@@ -183,12 +183,8 @@
         </tr>
     </table>
 
-    <p align=center><a href=index.html>Go back to index</a></p>
 
-
-
-
-    <p id=" bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
+    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="index.html">Go back to index</a>
 </body>
 
 </html>
