--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </font>
 
   <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the UNOFFICIAL Online
-      Resources for the <i>students</i> of UITS <br>(facultyরা কষ্ট দেয় তাই কাট্টি 😔).<br>Note that I will be primarily working on <a
+      Resources for the <i>students</i> of UITS <br>Note that I will be primarily working on <a
         href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
         Hosting</a></small></p>
 
@@ -161,11 +161,11 @@
   <h3 align=center>Socials? </h3>
   <table align=center>
     <tr>
-      <th><a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=discord-logo.png
+      <th><a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.png
             alt="Discord Server (Protein Shake)" width="100" height="100"></a></th>
-      <th><a href="https://t.me/oUITS_ORnU" target="_blank"><img src=telegram-logo2.png
+      <th><a href="https://t.me/oUITS_ORnU" target="_blank"><img src=images\telegram-logo2.png
             alt="Telegram Channel (oUITS - Online Resources and Updates)" width="100" height="100"></a></th>
-      <th><a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=fb-logo.png
+      <th><a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.png
             alt="Facebook Group (oUITS - Online Resources)" width="100" height="100"></a></th>
     </tr>
   </table>
@@ -212,9 +212,11 @@
   <br>
 
 <ul>External Sources?
-  <li><a href=References.html>See References for Future Updates</a></li>
+  <li><a href=page-depth-01\References.html>See References for Future Updates</a></li>
   <br>
-  <li><a href=Tutorials.html>See Tutorials for Resources</a></li>
+  <li><a href=page-depth-01\Tutorials.html>See Tutorials for Resources</a></li>
+  <br>
+  <li><a href=page-depth-01\code-blogs.html>See Coding Blogs</a></li>
 </ul>
 
 
