--- a/wip.html
+++ b/wip.html
@@ -1,11 +1,43 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
    table, th, td {
   border: 2px solid rgba(31, 106, 168, 0.452);
   border-radius: 10px;
 }
+
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
     </style>
 <title>
     Image Page
@@ -16,6 +48,37 @@
     (wip page)</h1>
 <p align=center><a href =index.html >Go back</a></p>
 <p align=center><a href ="#end" >Go to end</a></p>
+
+
+<hr>
+
+<p>(trying top bar from w3schools)</p>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
+<div style="padding-left:16px">
+  <h2>Top Navigation Example</h2>
+  <p>Some content..</p>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <br><br>
