fixed non-current folder relative links

--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -184,7 +184,7 @@
     </table>
 
 
-    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="index.html">Go back to index</a>
+    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
 </body>
 
 </html>
