--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -169,7 +169,7 @@
             </div>
         </section>
         
-        <p class="footer" align=center><a style="color: #8c8c8c;"" href=index.html>Go back to index</a>
+        <p class="footer" align=center><a style="color: #8c8c8c;"" href=../index.html>Go back to index</a>
     </div>
 </body>
 </html>
