--- a/page-depth-01/code-blogs.html
+++ b/page-depth-01/code-blogs.html
@@ -84,5 +84,7 @@
         <h1>Main Content Goes Here</h1>
         <p>This is where the rest of your page content would go, below the blog preview top bar.</p>
     </div>
+
+    <p class="footer" align=center><a style="color: #8c8c8c;"" href=../index.html>Go back to index</a>
 </body>
 </html>
