--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
+    /*Table CSS*/
+
     table,
     th,
     td {
       border: 2px solid rgba(31, 106, 168, 0.452);
       border-radius: 10px;
     }
+
+    /*Drive iframe CSS*/
 
     .iframe-container {
       width: 95%;
@@ -27,6 +32,73 @@
       transform-origin: top left;
       /* Scale from top-left corner */
     }
+
+    /*TOP BAR CSS*/
+
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .topnav {
+      overflow: hidden;
+      background-color: #333;
+    }
+
+    .topnav a {
+      float: left;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+
+    .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    .topnav a.active {
+      background-color: #197dd5;
+      color: white;
+      text-align: center;
+    }
+    
+    /*BOTTOM BAR CSS*/
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.navbar a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background: #f1f1f1;
+  color: black;
+}
+
+.navbar a.active {
+  background-color: #197dd5;
+  color: white;
+}
+
+.main {
+  padding: 16px;
+  margin-bottom: 30px;
+}
   </style>
   <title>
     oUITS Resources
@@ -35,13 +107,26 @@
 <!--style="color:rgba(0, 0, 0, 0.249);"-->
 
 <body style="background-color:rgba(170, 238, 169, 0.233);">
-  <br>
-  <br>
+  
 
+ 
 
-  <font size="18">
-    <p align=center><i>oUITS Resources</i></p>
-  </font>
+  <div class="topnav">
+    <font size="24"></font><p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p></font>
+    <!--<a class="active" href="#home">Home</a>-->
+   
+  </div>
+  
+  <div style="padding-left:16px">
+  </div>
+  <div class="navbar">
+    <a class="active" href=page-depth-01\Tutorials.html>Resources Tutorial</a>
+    <a class="active" href=page-depth-01\References.html>Future References</a>
+    <a class="active" href=page-depth-01\code-blogs.html>Coding Blogs</a>
+  </div>
+
+ 
+  
 
   <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the UNOFFICIAL Online
       Resources for the <i>students</i> of UITS <br>Note that I will be primarily working on <a
@@ -211,13 +296,13 @@
   <br>
   <br>
 
-<ul>External Sources?
-  <li><a href=page-depth-01\References.html>See References for Future Updates</a></li>
-  <br>
-  <li><a href=page-depth-01\Tutorials.html>See Tutorials for Resources</a></li>
-  <br>
-  <li><a href=page-depth-01\code-blogs.html>See Coding Blogs</a></li>
-</ul>
+  <ul>External Sources?
+    <li><a href=page-depth-01\References.html>See References for Future Updates</a></li>
+    <br>
+    <li><a href=page-depth-01\Tutorials.html>See Tutorials for Resources</a></li>
+    <br>
+    <li><a href=page-depth-01\code-blogs.html>See Coding Blogs</a></li>
+  </ul>
 
 
   <br>
