trying blog windows in index

--- a/archive.html
+++ b/archive.html
@@ -20,6 +20,17 @@
 
 <br><br>
 <hr>
+<ul>External Sources?
+  <li><a href=page-depth-01\References.html>See References for Future Updates</a></li>
+  <br>
+  <li><a href=page-depth-01\Tutorials.html>See Tutorials for Resources</a></li>
+  <br>
+  <li><a href=page-depth-01\code-blogs.html>See Coding Blogs</a></li>
+</ul>
+
+
+
+<hr>
 
 <p><a href= "https://codeforces.com/"><img src = codeforces-sponsored-by-ton.png alt = "CodeForces" width=555 height=130></a></p>
 <br>
