--- a/wip.html
+++ b/wip.html
@@ -83,6 +83,7 @@
 <h1 id="top" align = center> 
     (wip page)</h1>
 <p align=center><a href =index.html >Go back</a></p>
+<p align=center><a href ="archive.html" >Go to Archvie</a></p>
 <p align=center><a href ="#end" >Go to end</a></p>
 <hr>
 
