--- a/index.html
+++ b/index.html
@@ -64,41 +64,102 @@
       color: white;
       text-align: center;
     }
-    
+
+     /*blog windows css*/
+
+     .top-bar2 {
+            position: relative;
+            width: 100%;
+            height: 250px;
+            background-color: #f0f0f0;
+            border-bottom: 1px solid #ddd;
+            overflow: hidden;
+        }
+
+        .iframe-container2 {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            position: static;
+        }
+
+        .iframe-container2 iframe {
+            width: 100%;
+            height: 200%;
+            border: none;
+            position: absolute;
+            top: -100px;
+            left: 0;
+            pointer-events: none;
+            /* Prevents interaction with the iframe */
+        }
+
+        .view-more-link2 {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            background-color: #0066cc;
+            color: white;
+            padding: 8px 15px;
+            text-decoration: none;
+            border-radius: 4px;
+            font-weight: bold;
+            z-index: 10;
+            transition: background-color 0.3s;
+        }
+
+        .view-more-link:hover {
+            background-color: #004c99;
+        }
+
+        .content2 {
+            padding: 20px;
+        }
+
+        /* Overlay to prevent iframe interaction */
+        .overlay2 {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: transparent;
+            z-index: 5;
+        }
     /*BOTTOM BAR CSS*/
 
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
+    .navbar {
+      overflow: hidden;
+      background-color: #333;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
 
-.navbar a {
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
+    .navbar a {
+      float: right;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
 
-.navbar a:hover {
-  background: #f1f1f1;
-  color: black;
-}
+    .navbar a:hover {
+      background: #f1f1f1;
+      color: black;
+    }
 
-.navbar a.active {
-  background-color: #197dd5;
-  color: white;
-}
+    .navbar a.active {
+      background-color: #197dd5;
+      color: white;
+    }
 
-.main {
-  padding: 16px;
-  margin-bottom: 30px;
-}
+    .main {
+      padding: 16px;
+      margin-bottom: 30px;
+    }
   </style>
   <title>
     oUITS Resources
@@ -107,16 +168,22 @@
 <!--style="color:rgba(0, 0, 0, 0.249);"-->
 
 <body style="background-color:rgba(170, 238, 169, 0.233);">
-  
-
- 
-
   <div class="topnav">
-    <font size="24"></font><p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p></font>
+    <font size="24"></font>
+    <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+    </font>
     <!--<a class="active" href="#home">Home</a>-->
-   
+
   </div>
-  
+
+  <div class="top-bar2">
+    <div class="iframe-container2">
+        <iframe src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
+    </div>
+    <div class="overlay2"></div>
+    <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link2" target="_blank">View More</a>
+</div>
+
   <div style="padding-left:16px">
   </div>
   <div class="navbar">
@@ -125,13 +192,6 @@
     <a class="active" href=page-depth-01\code-blogs.html>Coding Blogs</a>
   </div>
 
- 
-  
-
-  <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the UNOFFICIAL Online
-      Resources for the <i>students</i> of UITS <br>Note that I will be primarily working on <a
-        href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
-        Hosting</a></small></p>
 
   <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p>
   <br>
@@ -231,8 +291,13 @@
   <p align=center><i><a style="color:rgba(60, 60, 82, 0.733);"
         href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank"><small>(Link to
           the Google Drive)</small></a></i></p>
-
+  
   <br>
+          <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the UNOFFICIAL Online
+      Resources for the <i>students</i> of UITS <br>Note that I will be primarily working on <a
+        href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
+        Hosting</a></small></p>
+  
   <p align=center><small>Please be mindful of possible Legal issues<br>(like Copyright materials) </small></a></p>
 
   <br>
@@ -296,15 +361,6 @@
   <br>
   <br>
 
-  <ul>External Sources?
-    <li><a href=page-depth-01\References.html>See References for Future Updates</a></li>
-    <br>
-    <li><a href=page-depth-01\Tutorials.html>See Tutorials for Resources</a></li>
-    <br>
-    <li><a href=page-depth-01\code-blogs.html>See Coding Blogs</a></li>
-  </ul>
-
-
   <br>
   <br>
   <br>
@@ -352,6 +408,9 @@
   <br>
   <br>
   <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
+  <br>
+  <br>
+  <br>
 </body>
 
 </html>
