fixed blog window

--- a/wip.html
+++ b/wip.html
@@ -85,6 +85,7 @@
 <p align=center><a href =index.html >Go back</a></p>
 <p align=center><a href ="archive.html" >Go to Archvie</a></p>
 <p align=center><a href ="#end" >Go to end</a></p>
+<p align=center><a href ="tmp/blog-preview-topbar-rounded.html" >Go to temp</a></p>
 <hr>
 
 
