--- a/index.html
+++ b/index.html
@@ -10,16 +10,36 @@
 </head>
 <!--style="color:rgba(0, 0, 0, 0.249);"-->
 
-<body style="background-color:rgba(170, 238, 169, 0.233);">
+<body style="background-color:rgb(225, 230, 241);">
   <div class="topnav">
     <a class="active" href=page-depth-01\Tutorials.html><small>Resources<br>Tutorial</small></a>
     <a class="active" href=page-depth-01\References.html><small>Future<br>References</small></a>
-    <a class="active" href=page-depth-01\code-blogs.html><small>Coding<br>Blogs</small></a>
+    <a class="active" href="https://b1tranger-coding.blogspot.com/"><small>Coding<br>Blogs</small></a>
     <!--<a class="active" href="#home">Home</a>-->
 
   </div>
 
-  
+  <br>
+  <br>
+
+  <table border="10" align=center style="width:90%">
+    <tr>
+      <th>
+        <div class="topnav3">
+          <font size="24"></font>
+          <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>Latest Blog</i></p>
+          </font>
+        </div>
+        <div class="top-bar2">
+          <div class="iframe-container2">
+            <iframe src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
+          </div>
+          <div class="overlay2"></div>
+          <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link2" target="_blank">View More</a>
+        </div>
+      </th>
+    </tr>
+  </table>
 
   <div style="padding-left:16px">
   </div>
@@ -27,7 +47,7 @@
     <font size="24"></font>
     <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
     </font>
-    
+
   </div>
 
 
@@ -37,134 +57,79 @@
 
   <!-- Everything from here needs to be links-->
 
-  <br>
-
-
   <font size="7">
     <table border="10" align="center" style=" width:70%">
       <tr>
         <th>
 
-          <font size="5"> Primary Directories?</font>
+          <h6> Primary Directories?</h6>
         </th>
 
       </tr>
       <tr>
         <td>
-          <br>
           <div class="iframe-container">
             <iframe id="drive-frame"
               src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list"></iframe>
           </div>
-          <br>
+
         </td>
 
       </tr>
-      <tr>
-        <th>
-          <font size="5"> Highlights? </font>
-        </th>
 
-      </tr>
-      <tr>
-        <td>
-          <br>
-          <font size="3">
-            <ul style="color:rgba(0, 0, 0, 0.249);">
-              <li><a style="color:rgba(60, 60, 82, 0.733);"
-                  href="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE
-                  Files</a></li>
-              <br>
-              <li><a style="color:rgba(60, 60, 82, 0.733);"
-                  href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU"
-                  target="_blank">Modified
-                  Library Questions</a></li>
-              <br>
-              <li><a style="color:rgba(60, 60, 82, 0.733);"
-                  href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1"
-                  target="_blank">Routine
-                  Format</a></li>
-              <br>
-              <li><a style="color:rgba(60, 60, 82, 0.733);"
-                  href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa"
-                  target="_blank">Curated
-                  Book List</a></li>
-              <br>
-              <li><a style="color:rgba(60, 60, 82, 0.733);"
-                  href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt"
-                  target="_blank">Programming References</a></li>
-            </ul>
-          </font>
-          <br>
-        </td>
-      </tr>
-      <tr>
-        <th>
-
-          <font size="5">Similar Projects ! !</font>
-          <br>
-          <font size="3"><small style="color:rgba(60, 60, 82, 0.733);">(for references)</small></font>
-        </th>
-
-      </tr>
-      <tr>
-        <td>
-          <font size="3">
-            <ul>
-              <li style="color:rgba(60, 60, 82, 0.733);"><a href=" http://akibreza.github.io/uitsBOT" target="_blank"
-                  style="color:rgba(60, 60, 82, 0.733);">uitsBOT by Akib Reza (0432220005101061)</a></li>
-
-            </ul>
-
-          </font>
-        </td>
-
-      </tr>
     </table>
   </font>
 
 
-  <br>
+
 
   <p align=center><i><a style="color:rgba(60, 60, 82, 0.733);"
-        href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank"><small>(Link to
-          the Google Drive)</small></a></i></p>
-  
-  <br>
-          <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the UNOFFICIAL Online
-      Resources for the <i>students</i> of UITS <br>Note that I will be primarily working on <a
-        href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
-        Hosting</a></small></p>
-  
-  <p align=center><small>Please be mindful of possible Legal issues<br>(like Copyright materials) </small></a></p>
+        href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank"><small><b>( Link
+            to
+            the Google Drive? )</b></small></a></i></p>
 
-  <br>
-  <br>
-  <br>
-  <br>
-<table border="10" align=center style="width:90%">
-<tr>
-  <th>
-    <div class="topnav3">
-      <font size="24"></font>
-    <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>Latest Blog</i></p>
-    </font>
-    </div>
-<div class="top-bar2">
-    <div class="iframe-container2">
-        <iframe src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
-    </div>
-    <div class="overlay2"></div>
-    <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link2" target="_blank">View More</a>
-</div>
-</th>
-</tr>
-</table>
+            <br>
+  <table align=center style="width:70%;border-color:rgba(60, 60, 82, 0.733);">
+    <tr>
+      <p align=center> ( Highlights? ) </p>
+    </tr>
+    <tr>
+      <td align=center >
+        <a style="color:rgba(60, 60, 82, 0.733);"
+          href="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE
+          Files</a>
+      </td>
+      <td align=center >
+        <a style="color:rgba(60, 60, 82, 0.733);"
+          href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified
+          Library Questions</a>
+      </td>
+      <td align=center >
+        <a style="color:rgba(60, 60, 82, 0.733);"
+          href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine
+          Format</a>
+      </td>
+      <td align=center >
+        <a style="color:rgba(60, 60, 82, 0.733);"
+          href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">Curated
+          Book List</a>
+      </td>
+      <td align=center >
+        <a style="color:rgba(60, 60, 82, 0.733);"
+          href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">Programming
+          References</a>
+      </td>
+    </tr>
+  </table>
+
+
+
+
   
   <br>
   <br>
-  <br>
 
+  <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.801);">Click Here to see work in progress</a></p>
   <h3 align=center>Socials? </h3>
   <table align=center>
     <tr>
@@ -178,94 +143,15 @@
   </table>
 
 
+  <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the UNOFFICIAL Online
+      Resources for the <i>students</i> of UITS <br>Note that I will be primarily working on <a
+        href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
+        Hosting</a></small></p>
 
+  <p align=center><small>Please be mindful of possible Legal issues<br>(like Copyright materials) </small></a></p>
 
-  <br>
-  <br>
-  <br>
-
-  <!--style="border: 1px solid rgba(31, 106, 168, 0);
-  border-radius: 0px;" align="center"-->
-
-
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-
-  <hr>
-
-  <br>
-  <br>
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-
-
-  <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.801);">Click Here to see work in progress</a></p>
-
-  <br>
-
-  <h4 align=center style="color:rgba(153, 150, 150, 0.993);"><i>(add anon note here)</i></h4>
-  <p align=center><a href="https://forms.gle/WE3uazPGvsL1Exdg8" target="_blank"
-      style="color:rgba(0, 0, 0, 0.519);">Click Here to add note</a>
-
-    <br>
-    <br>
-
-    <a href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk"
-      target="_blank" style="color:rgba(0, 0, 0, 0.519);">Click Here to see note</a><br>
-  </p>
-  <br>
-  <br>
   <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
-  <br>
+  
   <br>
   <br>
 </body>
