--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <br>
   <br>
 
-  <table border="10" align=center style="width:90%">
+  <table border="10" align=center style="width:90%;">
     <tr>
       <th>
         <div class="topnav3">
@@ -52,18 +52,18 @@
 
 
   <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p>
-  <br>
-  <br>
+  
+
 
   <!-- Everything from here needs to be links-->
 
-  <font size="7">
+  
     <table border="10" align="center" style=" width:70%">
       <tr>
-        <th>
+        
 
-          <h6> Primary Directories?</h6>
-        </th>
+          <!--<h3 align =center>Primary Directories?</h3>-->
+        
 
       </tr>
       <tr>
@@ -76,22 +76,19 @@
         </td>
 
       </tr>
-
-    </table>
-  </font>
-
-
-
-
+<tr>
   <p align=center><i><a style="color:rgba(60, 60, 82, 0.733);"
-        href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank"><small><b>( Link
-            to
-            the Google Drive? )</b></small></a></i></p>
+    href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank"><small><b>( Link
+        to
+        the Google Drive? )</b></small></a></i></p>
+</tr>
+    </table>
+  
 
-            <br>
+
   <table align=center style="width:70%;border-color:rgba(60, 60, 82, 0.733);">
     <tr>
-      <p align=center> ( Highlights? ) </p>
+      <p align=center style="color: rgba(0, 0, 0, 0.594);"> ( Highlights? ) </p>
     </tr>
     <tr>
       <td align=center >
@@ -129,7 +126,7 @@
   <br>
   <br>
 
-  <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.801);">Click Here to see work in progress</a></p>
+  
   <h3 align=center>Socials? </h3>
   <table align=center>
     <tr>
@@ -147,7 +144,8 @@
       Resources for the <i>students</i> of UITS <br>Note that I will be primarily working on <a
         href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
         Hosting</a></small></p>
-
+        <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.801);">Click Here to see work in progress</a></p>
+        <br>
   <p align=center><small>Please be mindful of possible Legal issues<br>(like Copyright materials) </small></a></p>
 
   <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
