--- a/index.html
+++ b/index.html
@@ -86,32 +86,32 @@
   
 
 
-  <table align=center style="width:70%;border-color:rgba(60, 60, 82, 0.733);">
+  <table align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
     <tr>
       <p align=center style="color: rgba(0, 0, 0, 0.594);"> ( Highlights? ) </p>
     </tr>
     <tr>
-      <td align=center >
+      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
         <a style="color:rgba(60, 60, 82, 0.733);"
           href="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE
           Files</a>
       </td>
-      <td align=center >
+      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
         <a style="color:rgba(60, 60, 82, 0.733);"
           href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified
           Library Questions</a>
       </td>
-      <td align=center >
+      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
         <a style="color:rgba(60, 60, 82, 0.733);"
           href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine
           Format</a>
       </td>
-      <td align=center >
+      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
         <a style="color:rgba(60, 60, 82, 0.733);"
           href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">Curated
           Book List</a>
       </td>
-      <td align=center >
+      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
         <a style="color:rgba(60, 60, 82, 0.733);"
           href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">Programming
           References</a>
