--- a/index.html
+++ b/index.html
@@ -52,38 +52,37 @@
 
 
   <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p>
-  
+
 
 
   <!-- Everything from here needs to be links-->
 
-  
-    <table border="10" align="center" style=" width:70%">
-      <tr>
-        
+  <hr>
+  <table border="10" align="center" style=" width:70%">
+    <tr>
 
-          <!--<h3 align =center>Primary Directories?</h3>-->
-        
 
-      </tr>
-      <tr>
-        <td>
-          <div class="iframe-container">
-            <iframe id="drive-frame"
-              src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list"></iframe>
-          </div>
+      <!--<h3 align =center>Primary Directories?</h3>-->
 
-        </td>
 
-      </tr>
-<tr>
-  <p align=center><i><a style="color:rgba(60, 60, 82, 0.733);"
-    href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank"><small><b>( Link
-        to
-        the Google Drive? )</b></small></a></i></p>
-</tr>
-    </table>
-  
+    </tr>
+    <tr>
+      <td>
+        <div class="iframe-container">
+          <iframe id="drive-frame"
+            src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list"></iframe>
+        </div>
+
+      </td>
+
+    </tr>
+    <tr>
+      <p align=center><i><a style="color:rgba(60, 60, 82, 0.733);"
+            href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank"><small><b>(
+                Link to the Google Drive? )</b></small></a></i></p>
+    </tr>
+  </table>
+
 
 
   <table align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
@@ -118,15 +117,17 @@
       </td>
     </tr>
   </table>
+  <hr>
 
 
-
-
-  
+  <br>
+  <br>
+  <br>
+  <br>
   <br>
   <br>
 
-  
+
   <h3 align=center>Socials? </h3>
   <table align=center>
     <tr>
@@ -140,16 +141,18 @@
   </table>
 
 
-  <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the UNOFFICIAL Online
+  <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the UNOFFICIAL
+      Online
       Resources for the <i>students</i> of UITS <br>Note that I will be primarily working on <a
         href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
         Hosting</a></small></p>
-        <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.801);">Click Here to see work in progress</a></p>
-        <br>
   <p align=center><small>Please be mindful of possible Legal issues<br>(like Copyright materials) </small></a></p>
+  <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.801);">Click Here to see work in progress</a></p>
+  
+
 
   <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
-  
+
   <br>
   <br>
 </body>
