--- a/index.html
+++ b/index.html
@@ -139,14 +139,13 @@
             alt="Facebook Group (oUITS - Online Resources)" width="100" height="100"></a></th>
     </tr>
   </table>
-
+<p align=center ><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8" style="color:rgb(0, 0, 0);">( Leave a note? )</a></p>
 
   <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the UNOFFICIAL
       Online
       Resources for the <i>students</i> of UITS <br>Note that I will be primarily working on <a
         href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
-        Hosting</a></small></p>
-  <p align=center><small>Please be mindful of possible Legal issues<br>(like Copyright materials) </small></a></p>
+        Hosting</a>. Please be mindful of possible Legal issues (like Copyright materials)</small></p>
   <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.801);">Click Here to see work in progress</a></p>
   
 
