--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
   </table>
 <p align=center ><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8" style="color:rgb(0, 0, 0);">( Leave a note? )</a></p>
 
+<p align=center ><a href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing" style="color:rgba(0, 0, 0, 0.14);"><small>( See note? )</small></a></p>
+
   <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the UNOFFICIAL
       Online
       Resources for the <i>students</i> of UITS <br>Note that I will be primarily working on <a
