--- a/index.html
+++ b/index.html
@@ -143,11 +143,9 @@
 
 <p align=center ><a href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing" target="_blank" style="color:rgba(0, 0, 0, 0.14);"><small>( See note? )</small></a></p>
 
-  <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the UNOFFICIAL
+  <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the <b>UNOFFICIAL</b>
       Online
-      Resources for the <i>students</i> of UITS. <br>Note that I will be primarily working on <a
-        href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
-        Hosting</a>. Please be mindful of possible Legal issues (like Copyright materials)</small></p>
+      Resources for the <i>students</i> of UITS. Note that I will be primarily working on <a href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them but please be mindful of possible Legal issues (like Copyright materials)</small></p>
   <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.801);">Click Here to see work in progress</a></p>
   
 
