--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body style="background-color:rgb(225, 230, 241);">
   <div class="topnav">
-    <a class="active" href=page-depth-01\Tutorials.html><small>Resources<br>Tutorial</small></a>
-    <a class="active" href=page-depth-01\References.html><small>Future<br>References</small></a>
+    <a class="active" href=page-depth-01\Tutorials.html><small>Resources<br>Tutorials</small></a>
+    <a class="active" href=page-depth-01\References.html><small>References</small></a>
     <a class="active" href="https://b1tranger-coding.blogspot.com/"><small>Coding<br>Blogs</small></a>
     <!--<a class="active" href="#home">Home</a>-->
 
@@ -48,11 +48,8 @@
 
   </div>
 
-
-
-  <!-- Everything from here needs to be links-->
-
   <hr>
+
   <table border="10" align="center" style=" width:70%">
     <tr>
 
