--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="background-color:rgb(225, 230, 241);">
   <div class="topnav">
     <a class="active" href=page-depth-01\Tutorials.html><small>Resources<br>Tutorials</small></a>
-    <a class="active" href=page-depth-01\References.html><small>References</small></a>
+    <a class="active" href=page-depth-01\References.html><small>References<br>(updates)</small></a>
     <a class="active" href="https://b1tranger-coding.blogspot.com/"><small>Coding<br>Blogs</small></a>
     <!--<a class="active" href="#home">Home</a>-->
 
